added WithdrawalPayload to the API design
