# swagger/swagger.yaml
@@ -11,7 +11,7 @@ definitions:
       acquiringBin: 400171
       amount: 12400
       businessApplicationId: CI
-      localTransactionDateTime: 2008-01-06T10:30:05+03:00
+      localTransactionDateTime: 1984-10-06T15:03:29+03:00
       merchantCategoryCode: 4829
       recipientPrimaryAccountNumber: "4123640062698797"
       retrievalReferenceNumber: "430000367618"
@@ -45,7 +45,7 @@ definitions:
         type: string
       localTransactionDateTime:
         description: 'The date and time the transaction takes place, '
-        example: 2008-01-06T10:30:05+03:00
+        example: 1984-10-06T15:03:29+03:00
         format: date-time
         type: string
       merchantCategoryCode:
@@ -91,6 +91,94 @@ definitions:
         minLength: 3
         type: string
     title: DepositsPayload
+    type: object
+  WithdrawalPayload:
+    description: WithdrawalPayload is the type used to create a withdrawal.
+    example:
+      acquirerCountryCode: 643
+      acquiringBin: 400171
+      amount: 12400
+      businessApplicationId: CI
+      localTransactionDateTime: 2013-08-16T20:25:03+03:00
+      merchantCategoryCode: 4829
+      recipientPrimaryAccountNumber: "4123640062698797"
+      retrievalReferenceNumber: "430000367618"
+      senderAccountNumber: "4541237895236"
+      senderName: Mohammed Qasim
+      senderReference: "1234"
+      systemsTraceAuditNumber: 313042
+      transactionCurrencyCode: USD
+    properties:
+      acquirerCountryCode:
+        description: Country of the originator BIN.
+        example: 643
+        format: int64
+        type: integer
+      acquiringBin:
+        description: BIN number identifies the originator of cash in transaction.
+        example: 400171
+        format: int64
+        type: integer
+      amount:
+        description: Transaction amount in agent currency
+        example: 12400
+        format: int64
+        type: integer
+      businessApplicationId:
+        description: This field is populated with business application identifier
+          for the transaction.
+        example: CI
+        maxLength: 2
+        minLength: 2
+        type: string
+      localTransactionDateTime:
+        description: 'The date and time the transaction takes place, '
+        example: 2013-08-16T20:25:03+03:00
+        format: date-time
+        type: string
+      merchantCategoryCode:
+        description: Originators should populate 6012 for mVisa transaction.
+        example: 4829
+        format: int64
+        type: integer
+      recipientPrimaryAccountNumber:
+        description: Consumer PAN.16-digit PAN as provided by the consumer to agent.
+        example: "4123640062698797"
+        maxLength: 19
+        minLength: 13
+        type: string
+      retrievalReferenceNumber:
+        description: Matches message to others within a given transaction
+        example: "430000367618"
+        maxLength: 12
+        minLength: 12
+        type: string
+      senderAccountNumber:
+        description: mVisa cash-in transactions
+        example: "4541237895236"
+        type: string
+      senderName:
+        description: Name of agents business name
+        example: Mohammed Qasim
+        maxLength: 30
+        type: string
+      senderReference:
+        description: A reference number unique to the agent
+        example: "1234"
+        maxLength: 16
+        type: string
+      systemsTraceAuditNumber:
+        description: Key data element
+        example: 313042
+        format: int64
+        type: integer
+      transactionCurrencyCode:
+        description: Currency code
+        example: USD
+        maxLength: 3
+        minLength: 3
+        type: string
+    title: WithdrawalPayload
     type: object
   application/vnd.depositsmedia:
     description: deposits media type (default view)
@@ -188,6 +276,102 @@ definitions:
         type: string
     title: 'Mediatype identifier: application/vnd.depositsmedia+json'
     type: object
+  application/vnd.withdrawalmedia:
+    description: withdrawal media type (default view)
+    example:
+      ID: Praesentium non ratione sint molestias similique qui.
+      acquirerCountryCode: 643
+      acquiringBin: 400171
+      amount: 12400
+      businessApplicationId: CI
+      localTransactionDateTime: 1984-01-02T16:41:00+03:00
+      merchantCategoryCode: 4829
+      recipientPrimaryAccountNumber: "4123640062698797"
+      retrievalReferenceNumber: "430000367618"
+      senderAccountNumber: "4541237895236"
+      senderName: Mohammed Qasim
+      senderReference: "1234"
+      systemsTraceAuditNumber: 313042
+      transactionCurrencyCode: USD
+      transactionIdentifier: Ipsam aperiam et sit laborum illum et.
+    properties:
+      ID:
+        example: Praesentium non ratione sint molestias similique qui.
+        type: string
+      acquirerCountryCode:
+        description: Country of the originator BIN.
+        example: 643
+        format: int64
+        type: integer
+      acquiringBin:
+        description: BIN number identifies the originator of cash in transaction.
+        example: 400171
+        format: int64
+        type: integer
+      amount:
+        description: Transaction amount in agent currency
+        example: 12400
+        format: int64
+        type: integer
+      businessApplicationId:
+        description: This field is populated with business application identifier
+          for the transaction.
+        example: CI
+        maxLength: 2
+        minLength: 2
+        type: string
+      localTransactionDateTime:
+        description: 'The date and time the transaction takes place, '
+        example: 1984-01-02T16:41:00+03:00
+        format: date-time
+        type: string
+      merchantCategoryCode:
+        description: Originators should populate 6012 for mVisa transaction.
+        example: 4829
+        format: int64
+        type: integer
+      recipientPrimaryAccountNumber:
+        description: Consumer PAN.16-digit PAN as provided by the consumer to agent.
+        example: "4123640062698797"
+        maxLength: 19
+        minLength: 13
+        type: string
+      retrievalReferenceNumber:
+        description: Matches message to others within a given transaction
+        example: "430000367618"
+        maxLength: 12
+        minLength: 12
+        type: string
+      senderAccountNumber:
+        description: mVisa cash-in transactions
+        example: "4541237895236"
+        type: string
+      senderName:
+        description: Name of agents business name
+        example: Mohammed Qasim
+        maxLength: 30
+        type: string
+      senderReference:
+        description: A reference number unique to the agent
+        example: "1234"
+        maxLength: 16
+        type: string
+      systemsTraceAuditNumber:
+        description: Key data element
+        example: 313042
+        format: int64
+        type: integer
+      transactionCurrencyCode:
+        description: Currency code
+        example: USD
+        maxLength: 3
+        minLength: 3
+        type: string
+      transactionIdentifier:
+        example: Ipsam aperiam et sit laborum illum et.
+        type: string
+    title: 'Mediatype identifier: application/vnd.withdrawalmedia+json'
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -237,6 +421,44 @@ paths:
       summary: show deposits
       tags:
       - deposits
+  /withdrawal:
+    post:
+      description: creates a withdrawal
+      operationId: withdrawal#create
+      parameters:
+      - description: WithdrawalPayload is the type used to create a withdrawal.
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/WithdrawalPayload'
+      responses:
+        "201":
+          description: Created
+      schemes:
+      - http
+      summary: create withdrawal
+      tags:
+      - withdrawal
+  /withdrawal/{id}:
+    get:
+      description: shows a withdrawal
+      operationId: withdrawal#show
+      parameters:
+      - in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/withdrawal'
+      schemes:
+      - http
+      summary: show withdrawal
+      tags:
+      - withdrawal
 produces:
 - application/json
 - application/xml
